--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 body {
     font-family: Roboto, sans-serif;
-    color: #2E2F42;
+    color: #434455;
+    background-color: #FFFFFF;
 }
 
 a {
@@ -12,15 +13,16 @@ ul {
 }
 
 .webstudio {
-    font-family: raleway, sans-serif;
+    font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
-    line-height: 1.16667;
+    line-height: 1.7;
     letter-spacing: 0.03em;
-    color: #2e2f42;
+    color: #4d5ae5;
+    text-transform: uppercase;
 }
 .web-color {
-    color: #4d5ae5;
+    color: #2e2f42;
 }
 
 .head-nav {
@@ -31,12 +33,16 @@ ul {
         color: #2e2f42;
 }
 
-.head-nav:hover {
+.head-nav:hover,
+.head-nav:focus {
     color: #404bbf;
 }
 
-.head-contact {
+.head-address {
     font-style: normal;
+}
+
+.head-contact {
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
@@ -44,7 +50,8 @@ ul {
     color: #434455;
 }
 
-.head-contact:hover {
+.head-contact:hover,
+.head-contact:focus {
     color: #404bbf;
 }
 
@@ -55,7 +62,7 @@ ul {
 .order-title {
     font-weight: 700;
         font-size: 56px;
-        line-height: 1.07143;
+        line-height: 1.07;
         letter-spacing: 0.02em;
         text-align: center;
         color: #fff;
@@ -71,6 +78,7 @@ ul {
         background-color: #4d5ae5;
 }
 
+.order-btn:focus,
 .order-btn:hover {
     background: #404bbf;
 }
@@ -90,12 +98,21 @@ ul {
         color: #434455;
 }
  
+.workers {
+    background-color: #F4F4FD
+}
+
 .workers-title {
     font-weight: 700;
         font-size: 36px;
-        line-height: 1.11111;
+        line-height: 1.11;
         letter-spacing: 0.02em;
         text-align: center;
+        text-transform: capitalize;
+}
+
+.workers-list {
+    background-color: #FFFFFF
 }
 
 .workers-name {
@@ -118,9 +135,10 @@ ul {
 .portf-title {
     font-weight: 700;
         font-size: 36px;
-        line-height: 1.11111;
+        line-height: 1.11;
         letter-spacing: 0.02em;
         text-align: center;
+        text-transform: capitalize;
 }
 
 .portf-name {
@@ -143,13 +161,17 @@ ul {
 }
 
 .webstudio-two {
-        font-family: raleway, sans-serif;
+        font-family: "Raleway", sans-serif;
         font-weight: 700;
         font-size: 18px;
-        line-height: 1.16667;
+        line-height: 1.7;
         letter-spacing: 0.03em;
         text-transform: uppercase;
-        color: #f4f4fd;
+        color: #4d5ae5;
+}
+
+.web-color-two {
+    color: #f4f4fd;
 }
 
 .footer-text {
