--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ ul {
     font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
-    line-height: 1.7;
+    line-height: 1.17;
     letter-spacing: 0.03em;
     color: #4d5ae5;
     text-transform: uppercase;
@@ -88,6 +88,7 @@ ul {
         font-size: 20px;
         line-height: 1.2;
         letter-spacing: 0.02em;
+        color: #2e2f42;
 }
 
 .advg-text {
@@ -108,10 +109,15 @@ ul {
         line-height: 1.11;
         letter-spacing: 0.02em;
         text-align: center;
+        color: #2e2f42;
         text-transform: capitalize;
 }
 
 .workers-list {
+    background-color: #FFFFFF
+}
+
+.workers-inform {
     background-color: #FFFFFF
 }
 
@@ -121,6 +127,7 @@ ul {
         line-height: 1.2;
         letter-spacing: 0.02em;
         text-align: center;
+        color: #2e2f42;
 }
 
 .workers-position {
@@ -138,6 +145,7 @@ ul {
         line-height: 1.11;
         letter-spacing: 0.02em;
         text-align: center;
+        color: #2e2f42;
         text-transform: capitalize;
 }
 
@@ -146,6 +154,7 @@ ul {
         font-size: 20px;
         line-height: 1.2;
         letter-spacing: 0.02em;
+        color: #2e2f42;
 }
 
 .portf-text {
@@ -164,7 +173,7 @@ ul {
         font-family: "Raleway", sans-serif;
         font-weight: 700;
         font-size: 18px;
-        line-height: 1.7;
+        line-height: 1.17;
         letter-spacing: 0.03em;
         text-transform: uppercase;
         color: #4d5ae5;
