--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ ul {
     color: #2e2f42;
 }
 
-.head-title {
+.head-nav {
     font-weight: 500;
         font-size: 16px;
         line-height: 1.5;
@@ -33,8 +33,8 @@ ul {
         color: #2e2f42;
 }
 
-.head-title:hover,
-.head-title:focus {
+.head-nav:hover,
+.head-nav:focus {
     color: #404bbf;
 }
 
@@ -42,7 +42,7 @@ ul {
     font-style: normal;
 }
 
-.head-title {
+.head-contact {
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
@@ -50,8 +50,8 @@ ul {
     color: #434455;
 }
 
-.head-title:hover,
-.head-title:focus {
+.head-contact:hover,
+.head-contact:focus {
     color: #404bbf;
 }
 
